workloads/ingresses/overlays/flink-demo/cmf-ingressroute-patch.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cmf
  namespace: operator
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cmf.flink-demo.confluentdemo.local`)
      kind: Rule
      services:
        - name: cmf-service
          port: 80
          scheme: http
  tls:
    secretName: cmf-tls
