workloads/ingresses/overlays/flink-demo/cmf-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cmf
  namespace: operator
  annotations:
    argocd.argoproj.io/sync-wave: "110"
spec:
  routes:
    - match: Host(`cmf.flink-demo.confluentdemo.local`)
      kind: Rule
      services:
        - name: cmf-service
          port: 80
          scheme: http
