workloads/ingresses/overlays/flink-demo/schema-registry-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: schema-registry
  namespace: kafka
  annotations:
    argocd.argoproj.io/sync-wave: "110"
spec:
  routes:
    - kind: Rule
      match: Host(`schema-registry.flink-demo.confluentdemo.local`)
      services:
        - name: schemaregistry
          port: 8081
          scheme: http
